fix: fixed issue with replies cards showing underneath the location title

--- a/frontend/barks-and-bubbles-frontend/src/app/components/appointment-scheduler/appointment-scheduler.component.html
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/appointment-scheduler/appointment-scheduler.component.html
@@ -90,7 +90,7 @@
   <div class="replies-container scroll"
        [ngClass]="{'no-scroll': !this.replies.length}">
 
-    <div>
+    <div class="replies-layout">
 
       <div *ngFor="let reply of replies"
            class="reply-container"
