--- a/frontend/barks-and-bubbles-frontend/src/app/components/appointment-scheduler/appointment-scheduler.component.scss
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/appointment-scheduler/appointment-scheduler.component.scss
@@ -176,6 +176,10 @@ h2 {
   flex-direction: column;
   gap: 1em;
 }
+replies-layout {
+  top: 0;
+  position: sticky;
+}
 
 .reply-layout {
   display: flex;
