fix: added max dimensions to client list cards to avoid teh size of the cards changing too much when searching for a client

--- a/frontend/barks-and-bubbles-frontend/src/app/components/client-list/client-list.component.scss
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/client-list/client-list.component.scss
@@ -2,6 +2,8 @@ mat-card {
   background-color: white;
   margin-left: 1em;
   padding: 1em;
+  max-height: 25em;
+  max-width: 25em;
 }
 
 .card-container {
