fix: fixed response size of error message on client-list page

--- a/frontend/barks-and-bubbles-frontend/src/app/components/client-list/client-list.component.scss
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/client-list/client-list.component.scss
@@ -21,7 +21,7 @@ div {
 .error-msg {
   background-color: #c4c4c4;
   color: black;
-  width: 77vw;
+  width: 90%;
   border-radius: 1em;
   margin-left: 2em;
   height: 74vh;
