--- a/frontend/barks-and-bubbles-frontend/src/app/components/client-list/client-list.component.html
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/client-list/client-list.component.html
@@ -49,7 +49,8 @@
 
 <div *ngIf="clientsQry && clientsQry.length"
      class="card-container scroll">
-  <mat-card *ngFor="let client of clientsQry | sort: 'petName' : isAscending">
+  <mat-card *ngFor="let client of clientsQry | sort: 'petName' : isAscending"
+            (click)="goToClient(client._id)">
     <mat-card-header>
       <mat-card-title>
         <mat-icon matTooltip="{{client.active ? 'Deactivate Client' : 'Activate Client'}}"
