--- a/frontend/barks-and-bubbles-frontend/src/app/components/client-page/client-page.component.html
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/client-page/client-page.component.html
@@ -73,7 +73,8 @@
 
         <button mat-raised-button
                 color="primary"
-                [disabled]="clientForm.invalid">Update Pet</button>
+                [disabled]="clientForm.invalid"
+                (click)="updatePet()">Update Pet</button>
 
       </form>
     </mat-card-content>
