--- a/frontend/barks-and-bubbles-frontend/src/app/components/client-page/client-page.component.scss
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/client-page/client-page.component.scss
@@ -26,3 +26,11 @@ mat-card {
     grid-column: 1/3;
   }
 }
+
+@media (max-width: 1000px) {
+  .layout {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2, 1fr) !important;
+  }
+}
