fix: updated client-page to be more mobile friendly

--- a/frontend/barks-and-bubbles-frontend/src/app/components/client-page/client-page.component.html
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/client-page/client-page.component.html
@@ -80,7 +80,7 @@
     </mat-card-content>
   </mat-card>
 
-  <mat-card style="padding: 20em">
+  <mat-card class="wip-msg">
     <mat-card-title>WIP....</mat-card-title>
     <mat-card-content>This space will contain the other functionality for clients eventually</mat-card-content>
   </mat-card>
