--- a/frontend/barks-and-bubbles-frontend/src/app/components/client-page/client-page.component.html
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/client-page/client-page.component.html
@@ -65,8 +65,10 @@
           <mat-label>Contact Method</mat-label>
           <input matInput
                  type="text"
-                 formControlName="contactMethod" />
-          <mat-hint>6472345678</mat-hint>
+                 formControlName="contactMethod"
+                 (input)="formatPhoneNumber()"
+                 maxlength="14" />
+          <mat-hint>Format: (647) 234-5678</mat-hint>
         </mat-form-field>
 
         <span></span>
