--- a/frontend/barks-and-bubbles-frontend/src/app/components/client-page/client-page.component.html
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/client-page/client-page.component.html
@@ -66,7 +66,7 @@
           <input matInput
                  type="text"
                  formControlName="contactMethod"
-                 (input)="formatPhoneNumber()"
+                 (input)="this.DataService.formatPhoneNumber(this.clientForm)"
                  maxlength="14" />
           <mat-hint>Format: (647) 234-5678</mat-hint>
         </mat-form-field>
