fix: fixed formating on the pet form adn updated hints

--- a/frontend/barks-and-bubbles-frontend/src/app/components/client-page/client-page.component.html
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/client-page/client-page.component.html
@@ -68,7 +68,7 @@
                  formControlName="contactMethod"
                  (input)="this.DataService.formatPhoneNumber(this.clientForm)"
                  maxlength="14" />
-          <mat-hint>Format: (647) 234-5678</mat-hint>
+          <mat-hint>(647) 234-5678</mat-hint>
         </mat-form-field>
 
         <span></span>
