fix: added a placeholder for the appointment messages to save space on the screen

--- a/frontend/barks-and-bubbles-frontend/src/app/components/appointment-page/appointment-page.component.html
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/appointment-page/appointment-page.component.html
@@ -168,7 +168,7 @@
                                 class="message sent"
                                 [ngClass]="{'sent': this.message.status == 'delivered', 'unsent': this.message.status == 'failed', 'received': this.message.direction == 'inbound'}">
                         <mat-card-content>
-                          <p [innerText]="message.body"></p>
+                          <p [innerText]="message.body.length > 500 && message.direction == 'outbound-api'? 'Appointment Message Sent' : message.body"></p>
                         </mat-card-content>
                         <mat-card-footer align="end">
                           <sub>{{formatStatus(message.status)}} -
