--- a/frontend/barks-and-bubbles-frontend/src/app/components/appointment-scheduler/appointment-scheduler.component.html
+++ b/frontend/barks-and-bubbles-frontend/src/app/components/appointment-scheduler/appointment-scheduler.component.html
@@ -74,7 +74,7 @@
      *ngIf="panelType == 'clients'">
   <h3>Add a pet to the replies:</h3>
   <app-appointment-client-list [appointment]="this.appointment"
-                               [addToList]='true'></app-appointment-client-list>
+                               [addToList]=true></app-appointment-client-list>
 
 </div>
 
